--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ihamza</groupId>
-	<artifactId>crud-app</artifactId>
+	<artifactId>contact-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>crud-app</name>
-	<description>Spring Boot crud rest</description>
+	<name>contact-app</name>
+	<description>Contact App</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
